# Fullstack-TASK_MGR

./: .gitignore  Dockerfile  README.md  REFACTOR.md  docker-compose.yml  main.py  pyproject.toml
backend/: .env.example  .env.example   .gitignore  Dockerfile  entrypoint.sh  init.sql  init_mock_data.sql  pyproject.toml
backend/app/: main.py  mock_data_seed.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2026_04_18_1852-fad48ad002e5_.py  2026_04_18_2027-31847297e1c9_.py  2026_04_18_2124-6ef009ee6b1c_.py  2026_04_19_0201-1d845ae38bbd_.py  2026_04_19_1137-22ff62915296_.py  2026_04_19_1326-12b87057be4b_.py  2026_04_19_1931-fbbb2aea1356_.py  2026_04_20_0122-eefd6befeb36_.py  2026_04_26_1654-4bdced3fb0f6_.py  2026_04_27_2331-d971cbb1a4d1_.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  statistics.py  tasks.py  users.py
backend/app/core/: config.py
backend/app/core/auth/: backend.py  user_manager.py
backend/app/core/database/: base.py  db_helper.py
backend/app/crud/: tasks.py  tasks_changelogs.py  users.py
backend/app/dependencies/auth/: db_adapter.py  fastapi_users.py  strategy.py  user_manager.py
backend/app/enums/: tasks.py  tasks_changelogs.py  users.py
backend/app/models/: __init__.py  access_tokens.py  task_statistic.py  tasks.py  tasks_changelogs.py  users.py
backend/app/models/mixins/: timestamp.py
backend/app/schemas/: tasks.py  tasks_changelogs.py  users.py
backend/app/services/: tasks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  (+1 more)
(+37 files in other folders)
